:sparkles: add vulnerability scanner

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,10 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     sudo sh install.sh -b /usr/local/bin
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
+    curl -O -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh && \
+    sudo sh install.sh -b /usr/local/bin
+
+RUN export DEBIAN_FRONTEND=noninteractive && \
     curl -O -sSfL https://aquasecurity.github.io/trivy-repo/deb/public.key && \
     sudo apt-key add public.key && \
     echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | tee -a /etc/apt/sources.list.d/trivy.list
